fix collection seco

--- a/sections/go-collection-banner.liquid
+++ b/sections/go-collection-banner.liquid
@@ -2,10 +2,10 @@
 
 <div class="go-section-featured-collection">
     <div class="go-featured-collection-container">
-      <h2 class="go-h2-title">{{- collection.title | escape -}}</h2>
-      <div class="go-paragraph"> 
+      <h1 class="go-h2-title">{{- collection.title | escape -}}</h1>
+      <h2 class="go-paragraph"> 
         {{ collection.description }}
-    </div>
+      </h2>
     </div>
 </div>
 
