--- a/snippets/product-act-bar.liquid
+++ b/snippets/product-act-bar.liquid
@@ -62,6 +62,7 @@
           <button
             class="btn btn--full sticky__button"
           >
+            <span class="icon">{%- render 'icon-cart-white' -%}</span>
             <span style="text-transform:uppercase">
               {{ 'products.product.add_to_cart' | t }}
             </span>
