--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -418,6 +418,7 @@
                     >
                         <span>
                           {%- if product.selected_or_first_available_variant.available -%}
+                            <span class="icon">{%- render 'icon-cart-white' -%}</span>
                             {{ 'products.product.add_to_cart' | t }}
                           {%- else -%}
                             {{ 'products.product.sold_out' | t }}
