--- a/assets/custom.css
+++ b/assets/custom.css
@@ -2,20 +2,21 @@
     width: 0;
 }
 
-.go-product-card-badge  {
+.go-product-card-badge {
     position: absolute;
     z-index: 1;
     background: #ffffff;
     padding: 5px 12px;
     right: 10px;
     bottom: 10px;
-    font-family: proxima-nova,sans-serif;
+    font-family: proxima-nova, sans-serif;
 }
 
 
 /* Siwper CSS */
 
-.swiper-button-next, .swiper-button-prev {
+.swiper-button-next,
+.swiper-button-prev {
     width: 35px;
     height: 35px;
     color: #000;
@@ -23,17 +24,21 @@
     border-radius: 20px;
 }
 
-.swiper-button-next:after, .swiper-button-prev:after {
+.swiper-button-next:after,
+.swiper-button-prev:after {
     font-size: 13px;
     font-weight: bold;
 }
 
 @media (min-width: 990px) {
-    .swiper-button-next, .swiper-button-prev {
+
+    .swiper-button-next,
+    .swiper-button-prev {
         display: none;
     }
 
-    .swiper:hover .swiper-button-next, .swiper:hover .swiper-button-prev {
+    .swiper:hover .swiper-button-next,
+    .swiper:hover .swiper-button-prev {
         display: flex;
         animation: fadeOut 0.5s;
     }
@@ -49,8 +54,13 @@
 }
 
 @keyframes fadeOut {
-    0% {opacity: 0;}
-    100% {opacity: 1;}
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 .template--cart .go-contact-widget-btn {
@@ -63,7 +73,7 @@
 }
 
 #product-checkout-form .button {
-    transform: scale3d(1none,1none,1none);
+    transform: scale3d(1none, 1none, 1none);
     text-transform: uppercase;
     transform-style: preserve-3d;
     flex: none;
@@ -74,4 +84,36 @@
     font-size: 17px;
     font-weight: 700;
     transition: transform .2s ease-in-out, opacity .2s;
+}
+
+.shopify-app-block .jdgm-carousel-wrapper {
+    width: 100%;
+}
+
+.shopify-app-block .jdgm-carousel-wrapper .jdgm-widget.jdgm-carousel {
+    width: 100%;
+}
+
+.page-width {
+    padding: 0;
+}
+
+.jdgm-carousel--aligned-theme .jdgm-carousel-item__review {
+    height: auto;
+}
+
+.jdgm-carousel--aligned-theme .jdgm-carousel-item__reviewer-name-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+@media screen and (max-width: 991px) {
+    .shopify-app-block .jdgm-carousel-wrapper {
+        width: 100%;
+    }
+
+    .page-width {
+        padding: 0 5rem;
+    }
 }
