--- a/snippets/product-act-bar.liquid
+++ b/snippets/product-act-bar.liquid
@@ -60,7 +60,7 @@
       <div class="sticky_post">
         <div class="sticky-product__button">
           <button
-            class="btn btn--full sticky__button"
+            class="button button--primary btn--full sticky__button"
           >
             <span class="icon">{%- render 'icon-cart-white' -%}</span>
             <span style="text-transform:uppercase">
