--- a/assets/custom.css
+++ b/assets/custom.css
@@ -95,7 +95,7 @@
 }
 
 .page-width {
-    padding: 0;
+    padding: 0 1.5rem;
 }
 
 .jdgm-carousel--aligned-theme .jdgm-carousel-item__review {
@@ -106,6 +106,19 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+}
+
+.cart__footer .cart__discount {
+    width: 100%;
+    max-width: 35rem;
+}
+
+.header__inline-menu .list-menu--inline {
+    flex-wrap: unset;
+}
+
+.header__menu-item span {
+    font-size: 12.5px;
 }
 
 @media screen and (max-width: 991px) {
