--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -330,4 +330,27 @@
     {%- endif -%}
   {% render 'preorder-now' %}
   </body>
+
+  <script>
+    function getMobileOperatingSystem() {
+      var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+
+      // Windows Phone must come first because its UA also contains "Android"
+      if (/windows phone/i.test(userAgent)) {
+          return "windows-phone";
+      }
+
+      if (/android/i.test(userAgent)) {
+          return "android";
+      }
+
+      // iOS detection from: http://stackoverflow.com/a/9039885/177710
+      if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+          return "ios";
+      }
+
+      return "unknown";
+    }
+    document.body.classList.add(`device-type--${getMobileOperatingSystem()}`);
+  </script>
 </html>
