--- a/sections/main-cart-footer.liquid
+++ b/sections/main-cart-footer.liquid
@@ -136,7 +136,8 @@
     {
       "type": "text",
       "id": "discount_input_placeholder",
-      "label": "t:sections.main-cart-footer.settings.placeholder.label"
+      "label": "t:sections.main-cart-footer.settings.placeholder.label",
+      "default": "Discount code"
     }
   ],
   "blocks": [
