--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -98,7 +98,24 @@
                       </div>
                     {%- else -%}
                       <div class="product-option">
-                        <div class="pn-price-item" data-id="{{ item.key }}">{{ item.original_price | money }}</div>
+                        {% if item.variant.compare_at_price > item.original_price %}
+                          <div class="cart-item__discounted-prices">
+                            <span class="visually-hidden">
+                              {{ 'products.product.price.regular_price' | t }}
+                            </span>
+                            <s class="cart-item__old-price product-option">
+                              {{- item.variant.compare_at_price | money -}}
+                            </s>
+                            <span class="visually-hidden">
+                              {{ 'products.product.price.sale_price' | t }}
+                            </span>
+                            <strong class="cart-item__final-price product-option">
+                              {{ item.original_price | money }}
+                            </strong>
+                          </div>
+                        {% else %}
+                          <div class="pn-price-item" data-id="{{ item.key }}">{{ item.original_price | money }}</div>
+                        {% endif %}
                       </div>
                     {%- endif -%}
 
