--- a/assets/product-atcbar.css
+++ b/assets/product-atcbar.css
@@ -6,19 +6,20 @@
 
 .sticky-bottom {
     position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    bottom: 1rem;
+    left: 1rem;
     background: white;
     border-top: 1px solid #ddd;
     display: flex;
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.05);
+    box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.05);
     transform: translateY(100%);
     z-index: 999;
     transition: transform 0.55s ease-in-out;
+    max-width: 400px;
+    border-radius: 1rem;
 }
 
 .product-form.go-product-page-form-wrapper-copy .product-form__submit {
@@ -60,11 +61,13 @@
 
 .sticky-bottom .full-width.container {
     width: 100%;
-    padding: 1.2rem 5rem;
+    padding: 1.2rem 2rem;
     margin: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .sticky-bottom .sticky-stc-button--container,
@@ -72,6 +75,10 @@
     display: flex;
     align-items: baseline;
     gap: 1rem;
+}
+
+.sticky-bottom .sticky-stc-button--container .sticky-qualities {
+    display: none;
 }
 
 .sticky-bottom .sticky-stc-button--container .sticky-stc__title span {
