--- a/assets/custom.css
+++ b/assets/custom.css
@@ -156,3 +156,36 @@ shopify-accelerated-checkout more-payment-options-link {
 .template--collection #shopify-section-contact-widget {
     display: none !important;
 }
+
+.jdgm-carousel-title {
+    color: #000;
+    text-transform: uppercase;
+    margin-top: 0;
+    margin-bottom: 24px !important;
+    font-family: proxima-nova, sans-serif;
+    font-size: 48px;
+    line-height: 56px;
+}
+
+.jdgm-carousel-item__reviewer-name-wrapper *,
+.jdgm-carousel-item__review-body *,
+.jdgm-carousel-item__review-title,
+.jdgm-carousel-number-of-reviews * {
+    font-family: proxima-nova, sans-serif;
+}
+
+.jdgm-carousel__arrows {
+    display: none;
+}
+
+.jdgm-widget * {
+    color: #000;
+}
+
+@media (max-width: 767px) {
+    .jdgm-carousel-title {
+        margin-bottom: 16px !important;
+        font-size: 32px;
+        line-height: 40px;
+    }
+}
