--- a/snippets/go-facets.liquid
+++ b/snippets/go-facets.liquid
@@ -211,7 +211,7 @@
                   </summary>
                   <div id="Facet-{{ forloop.index }}-{{ section.id }}" class="{% if filter_type == 'horizontal' %}facets__display{% else %}facets__display-vertical{% endif %}">
                     <div class="{% if filter_type == 'horizontal' %}facets__header{% else %}facets__header-vertical{% endif %}">
-                      {%- assign max_price_amount = filter.range_max | money | strip_html | escape -%}
+                      {%- assign max_price_amount = filter.range_max | money -%}
                       <span class="facets__selected">{{ "products.facets.max_price" | t: price: max_price_amount }}</span>
                       {%- if filter_type != 'vertical' -%}
                         <facet-remove>
@@ -513,7 +513,7 @@
                           {{ filter.label | escape }}
                         </button>
 
-                        {%- assign max_price_amount = filter.range_max | money | strip_html | escape -%}
+                        {%- assign max_price_amount = filter.range_max | money -%}
                         <p class="mobile-facets__info">{{ "products.facets.max_price" | t: price: max_price_amount }}</p>
 
                         <price-range class="facets__price">
