hide contact widget

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -288,7 +288,7 @@
 
     {% section 'announcement-bar' %}
     {% section 'header' %}
-    {% section 'contact-widget' %}
+    {% comment %}{% section 'contact-widget' %}{% endcomment %}
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
       {{ content_for_layout }}
       {%  section "go-breadcrumbs" %}
