--- a/snippets/go-product-page-title.liquid
+++ b/snippets/go-product-page-title.liquid
@@ -13,5 +13,5 @@ usage:
 
 <div class="sg-product-page-wrapper">
     <h1 class="sg-product-page-h1-title">{{ first_name }}</h1>
-    <div class="sg-product-page-purchase-title">{% render 'price', product: product, price_class: '' %}</div>
+    <div class="sg-product-page-purchase-title">{% render 'price', product: product, price_class: '', enable_save_badge: enable_save_badge %}</div>
 </div>
